# SafarMa

./: 404.html  BELINK_AI_V2_STATUS.md  DEPLOY_NOW.md  FINAL_PRODUCTION_STATUS.md  PRODUCTION_LAUNCH_FA_EN.md  README.md  app.html  app1a.js  app1b.js  app2a.js  app2b.js  app3.js  app4.js  app5.js  belink-ai.css  belink-ai.js  belink-connected-v2.js  belink-connected.js  belink-runtime.js  compat.js  fix-data.js  index.html  legal.html  loader.js  manifest.webmanifest  online-v2.css  online-v2.js  plans.html  render.yaml  result-guard.js  safarma-final-v8.css  safarma-specialists-v8.js  styles.css  sw.js
.github/workflows/: backend-image.yml  belink-ai-ci.yml  belink-backend-ci.yml  frontend-ci.yml  pages.yml
.safarma-package/: part-000.b64  part-001.js  part-002.js
belink-ai-v2/: PUBLISH_AND_BUSINESS_LAUNCH.md  README.md
belink-ai-v2/backend/: .env.example  Dockerfile  agent.py  main.py  memory.py  pyproject.toml
belink-ai-v2/backend/tests/: test_core.py
belink-ai-v2/frontend/: config.js
release/: STATUS.md
